# OS_Dev

./: CMakeLists.txt  README.md  linker.ld  test.sh
src/Aarch64/: boot.s  kernel.s
src/C/: kernel.c  stdio.c  stdio.h
